--- a/cookiecutter.yaml
+++ b/cookiecutter.yaml
@@ -5,11 +5,13 @@ default_context:
     municipality_slug: "boston"
     python_municipality_slug: "boston"
     infrastructure_slug: "cdp-boston-c384047b"
-    maintainer_or_org_full_name: "JacksonMaxfield"
+    maintainer_or_org_full_name: "Council Data Project Contributors"
     hosting_github_username_or_org: "CouncilDataProject"
     hosting_github_repo_name: "boston"
     hosting_github_url: "https://github.com/CouncilDataProject/boston"
     hosting_web_app_address: "https://councildataproject.github.io/boston"
     firestore_region: "us-central"
     event_gather_timedelta_lookback_days: 4
-    event_gather_cron: "13 7,19 * * *"
+    event_gather_cron: "13 7 * * *"
+    enable_clipping: "true"
+    speech_to_text_model_version: "large"
